# pymp3dl

./: .gitignore  PRIMER.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pymp3dl/: __init__.py  cli.py  cookie_store.py  downloader.py  models.py  scraper.py  utils.py
tests/: conftest.py  test_downloader.py  test_scraper.py
tests/fixtures/: album_page.html  track_page.html
