[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymp3dl"
version = "0.1.0"
description = "Smart MP3 downloader for khinsider.com album pages"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "soulwax", email = "soulwax@users.noreply.github.com" }]
keywords = ["mp3", "downloader", "khinsider", "game-music", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.0",
    "tenacity>=8.2",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-beautifulsoup4",
]

[project.scripts]
pymp3dl = "pymp3dl.cli:main"

[project.urls]
Homepage = "https://github.com/soulwax/pymp3dl"
Repository = "https://github.com/soulwax/pymp3dl"
Issues = "https://github.com/soulwax/pymp3dl/issues"

[tool.hatch.build.targets.wheel]
packages = ["pymp3dl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
